etd-stats/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etdstats-server
  namespace: etd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etdstats-server
  template:
    metadata:
      labels:
        app: etdstats-server
    spec:
      containers:
        - name: etdstats-server
          image: 'sirily11/etdstats-server:v1.4.0'
          resources:
            requests:
              memory: "1000Mi"
              cpu: "500m"
            limits:
              memory: "2000Mi"
              cpu: "1000m"
          ports:
            - name: server-port
              containerPort: 3000
              protocol: TCP
      restartPolicy: Always
