etd-stats/service.yml
apiVersion: v1
kind: Service
metadata:
  name: etdstats-service
  namespace: etd
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: etdstats-server
